# 3DSlicer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  MeshSliceViewer.cpp  main.cpp
docs/: UserGuide.md
src/OpenCSG/src/: CMakeLists.txt
